upgrade for better gameplay
- background scrolling
- new control buttons
- game encapsulation

--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Shooter</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="main-play-area">
-        <img class="player-shooter" src="./img/hero.png" alt="hero">
+    <div id="title">
+        <h1>Shooter</h1>
+    </div>
+    <div id="game">
+        <img id="spaceship" src="./img/hero.png" alt="hero">
         <h4 class="game-instructions">
             Não deixe os inimigos invadirem o seu planeta!
         </h4>
-        <div class="start-button">
+        <div id="start-button">
             <h1>START</h1>
         </div>
     </div>
